--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ html {
   }
   
   .button {
-    background: #16a34a;
+    background: #b3b3ff;
     border-radius: 0.25em;
     color: white;
     cursor: pointer;
