--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ html {
   }
   
   .button {
-    background: #b3b3ff;
+    background: #944dff;
     border-radius: 0.25em;
     color: white;
     cursor: pointer;
@@ -40,7 +40,7 @@ html {
     padding: 0 1em;
   }
   .button:hover {
-    background-color: #17ac4e;
+    background-color: #6600ff;
   }
   
   .details-modal {
